# deep-learning-framework

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
docs/: Doxyfile
source/: CMakeLists.txt
source/ecosystem/: CMakeLists.txt
source/ecosystem/connect/: eco_api.cpp  tp_api_conn.cpp  tp_api_conn.h  tp_http_client_receiver.cpp  tp_http_client_receiver.h  tp_http_client_sender.cpp  tp_http_client_sender.h  tp_nn_server.cpp  tp_nn_server.h
source/ecosystem/include/: eco_api.h
source/ecosystem/objects/: tp_audio_file_reader.cpp  tp_audio_file_reader.h  tp_audio_file_reader_core.h  tp_function.cpp  tp_function.h  tp_function_core.h  tp_loss.cpp  tp_loss.h  tp_loss_core.h  tp_metric.cpp  tp_metric.h  tp_metric_core.h  tp_module.cpp  tp_module.h  tp_module_core.h  tp_nn.cpp  tp_nn.h  tp_nn_core.h  tp_optimizer.cpp  tp_optimizer.h  tp_optimizer_core.h  tp_param.cpp  tp_param.h  tp_parameters.cpp  tp_parameters.h  tp_parameters_core.h  tp_scalar.cpp  tp_scalar.h  tp_scalar_core.h  tp_tensor.cpp  tp_tensor.h  tp_tensor_core.h  tp_tensordata.cpp  tp_tensordata.h  tp_tensordata_core.h
source/ecosystem/utils/: tp_common.h  tp_cuda.cu  tp_cuda.h  tp_eco_exception_info.cpp  tp_eco_exception_info.h  tp_exception.cpp  tp_exception.h  tp_functimer.cpp  tp_functimer.h  tp_grid_canvas.cpp  tp_grid_canvas.h  tp_json_parser.cpp  tp_json_parser.h  tp_math.cpp  tp_math.h  tp_stream.cpp  tp_stream.h  tp_utils.cpp  tp_utils.h  tp_values.cpp
source/engine/: CMakeLists.txt
source/engine/api/: vapi.cpp  vcommon.h  vconst.cpp  vconst.h  vdefine.h  vdump.cpp
source/engine/api_objects/: vfunction.cpp  vfunction.h  vfunction_core.h  vloss.cpp  vloss.h  vloss_core.h  vmetric.cpp  vmetric.h  vmetric_core.h  vmodule.cpp  vmodule.h  vmodule_core.h  voptimizer.cpp  voptimizer.h  voptimizer_core.h  vparameters.cpp  vparameters.h  vparameters_core.h  vsession.cpp  vsession.h  vsession_core.h  vtensor.cpp  vtensor.h  vtensor_core.h
source/engine/include/: test.cpp  vapi.h  verrors.h  vtypes.h  vvalue.h  vwrapper.h
source/engine/local_objects/: vcbbackinfo.cpp  vcbbackinfo.h  vcbbackinfo_core.h  vcbbackslot.cpp  vcbbackslot.h  vcbbackslot_core.h  vcbitem.cpp  vcbitem.h  vcbitem_core.h  vdevicemanager.cpp  vdevicemanager.h  vdevicemanager_core.h  vexectracer.cpp  vexectracer.h  vexectracer_core.h  vexectracerpool.cpp  vexectracerpool.h  vexectracerpool_core.h  vgraph.cpp  vgraph.h  vgraph_core.h  vgraph_node.cpp  vgraph_node.h  vgraph_node_core.h  vhypermanager.cpp  vhypermanager.h  vhypermanager_core.h  vtensordata.cpp  vtensordata.h  vtensordata_core.h  vudfitem.cpp  vudfitem.h  vudfitem_core.h
source/engine/support/: vback_queue.cpp  vback_queue.h  vfunctimer.cpp  vfunctimer.h  vmath.cu  vmath.h
source/engine/utils/: vexception.cpp  vexception.h  vutils.cpp  vutils.h  vvalue.cpp
source/python/: CMakeLists.txt  HISTORY.txt  Readme.txt  setup.py
source/python/cpp/: api_python.cpp  api_python.h  data_handler.cpp  data_handler.h  exception_handler.cpp  exception_handler.h  inner_proc.cpp  inner_proc.h
source/python/konanai/: __init__.py  _global_variables.py  api.py  dataloader.py  parameters.py  session.py  session_manager.py  tensor.py
source/python/konanai/cuda/: __init__.py
source/python/konanai/datasets/: __init__.py  cifar10.py  coco.py  csv.py  csvmap_audio.py  dataset.py  filesystem.py  mnist.py  nlp.py
source/python/konanai/nn/: __init__.py
source/python/konanai/nn/modules/: __init__.py  activation.py  batchnorm.py  container.py  conv.py  distance.py  dropout.py  flatten.py  linear.py  loss.py  metric.py  module.py  normalization.py  original.py  pooling.py  rnn.py  sparse.py  upsampling.py
source/python/konanai/optim/: __init__.py  adagrad.py  adam.py  momentum.py  nesterov.py  optimizer.py  rmsprop.py  sgd.py
source/python/konanai/utils/: __init__.py  functions.py
